tests/ui/01-capture-state.stderr
error[E0597]: `non_scoped` does not live long enough
  --> tests/ui/01-capture-state.rs:15:31
   |
15 |            scoped.as_mut().spawn(async |state: &Mutex<u64>| {
   |  __________-_____________________^
   | | _________|
   | ||
16 | ||             yield_now().await;
17 | ||             *state.lock().unwrap() += 1;
18 | ||             *non_scoped.lock().unwrap() += 1;
19 | ||             yield_now().await;
20 | ||         });
   | ||_________^- argument requires that `non_scoped` is borrowed for `'static`
   | |__________|
   |            borrowed value does not live long enough
...
24 |    }
   |    - `non_scoped` dropped here while still borrowed
